--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                 <button class="filter-button" onclick="filterSelection('python')">Python</button>
                 <button class="filter-button" onclick="filterSelection('java')">Java</button>
                 <button class="filter-button" onclick="filterSelection('web')">Web Dev</button>
+                <button class="filter-button" onclick="filterSelection('uiux')">UI/UX</button>
             </div>
 
             <!--Individual Projects-->
@@ -290,6 +291,22 @@
                             <br>
                             <br>
                             <i>JavaScript / EJS / CSS</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="each-project uiux">
+                    <img class="proj-img" src="assets/images/7.png" />
+                    <div class="proj-description container column">
+                        <div class="img-description">
+                            <h2>Rocky's Matcha</h2>
+                            <p>Website redesign using <b>Figma</b>
+                            </p>
+                            <br>
+                            <a href="https://github.com/klynvan/rockymatcha/blob/main/mockup.png" target="_blank">Repo for this
+                                website</a>
+                            <br>
+                            <br>
+                            <i>Figma</i>
                         </div>
                     </div>
                 </div>
