--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="each-project uiux">
                     <img class="proj-img" src="assets/images/7.png" />
                     <div class="proj-description container column">
@@ -302,8 +303,7 @@
                             <p>Website redesign using <b>Figma</b>
                             </p>
                             <br>
-                            <a href="https://github.com/klynvan/rockymatcha/blob/main/mockup.png" target="_blank">Repo for this
-                                website</a>
+                            <a href="https://github.com/klynvan/rockymatcha/blob/main/mockup.png" target="_blank">Mockup</a>
                             <br>
                             <br>
                             <i>Figma</i>
