--- a/index.html
+++ b/index.html
@@ -300,13 +300,29 @@
                     <div class="proj-description container column">
                         <div class="img-description">
                             <h2>Rocky's Matcha</h2>
-                            <p>Website redesign using <b>Figma</b>
+                            <p>Website redesign using <b>Figma</b>.
                             </p>
                             <br>
                             <a href="https://github.com/klynvan/rockymatcha/blob/main/mockup.png" target="_blank">Mockup</a>
                             <br>
                             <br>
-                            <i>Figma</i>
+                            <i> Branding / UX Design </i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="each-project uiux">
+                    <img class="proj-img" src="assets/images/WA.png" />
+                    <div class="proj-description container column">
+                        <div class="img-description">
+                            <h2>World Advisor</h2>
+                            <p> Travel advising platform that aims at assisting traveler with information about their desiered destination. Using  <b>Figma</b> to create wireframes and mockups.
+                            </p>
+                            <br>
+                            <a href="https://github.com/klynvan/rockymatcha/blob/main/mockup.png" target="_blank">Read Case Study</a>
+                            <br>
+                            <br>
+                            <i> UX Research / UX Design / Usability Test</i>
                         </div>
                     </div>
                 </div>
