--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             <p> Travel advising platform that aims at assisting traveler with information about their desiered destination. Using  <b>Figma</b> to create wireframes and mockups.
                             </p>
                             <br>
-                            <a href="https://github.com/klynvan/rockymatcha/blob/main/mockup.png" target="_blank">Read Case Study</a>
+                            <a href="https://drive.google.com/file/d/1DWwQMJcaO-qmsFb2pRgw1quOHRm2hsWe/view?usp=sharing" target="_blank">Read Case Study</a>
                             <br>
                             <br>
                             <i> UX Research / UX Design / Usability Test</i>
